fixed Contact page responsive css and Download CV button not showing in desktop

--- a/src/components/Pages/Contact/Contact.module.css
+++ b/src/components/Pages/Contact/Contact.module.css
@@ -5,7 +5,7 @@
     height: 100%;
     margin: 0 5vw;
     text-align: left;
-
+    overflow-y:scroll ;
 }
 .contactText {
     display: inline;
